--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "aframe": "^1.2.0",
+    "aframe-environment-component": "^1.3.1",
     "aframe-react": "^4.4.0",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "three": "^0.136.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
