--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.7",
+    "@react-three/drei": "^8.3.1",
+    "@react-three/fiber": "^7.0.24",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -15,7 +17,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "three": "^0.136.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
